# Sirius-Discord-Bot

./: .breakpoints  README.md  main.py  pyproject.toml
cogs/: .gitignore  Fun.py  General.py  Memes.py  Mod_Permissions.py  Music.py  Tasks.py  Timezone_dependent.py  prefixes.json
