[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_ProfuseSingleLogic"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.2"
python = "^3.8"
pytz = "^2021.3"
youtube_dl = "^2021.6.6"
nextcord = "^2.3.2"
[tool.poetry.dev-dependencies]
